# prime-benchmark

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  brute.py  main.py  pyproject.toml  time_wrapper.py
algorithms/: sieve.py
tests/: test_brute.py  test_main.py  test_sieve.py
